objects/ssot__VoiceCallEngagement__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementActionId__c</fullName>
        <label>Engagement Action</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Voice Call Engagement Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallFromName__c</fullName>
        <label>Voice Call From Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallFromPhoneNumber__c</fullName>
        <label>Voice Call From Phone Number</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallId__c</fullName>
        <label>Voice Call Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719818354499_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCallEngagement_VoiceCallId_map__rel</label>
        <referenceTo>ssot__VoiceCall__dlm</referenceTo>
        <relationshipLabel>VoiceCallEngagement_VoiceCallId_map__rel</relationshipLabel>
        <relationshipName>rel_1719818354499_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720024290593_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VoiceCallEngagement_EngagementAction_rel</label>
        <referenceTo>ssot__EngagementAction__dlm</referenceTo>
        <relationshipLabel>VoiceCallEngagement_EngagementAction_rel</relationshipLabel>
        <relationshipName>rel_1720024290593_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>